--- a/aliveapp/package.json
+++ b/aliveapp/package.json
@@ -9,14 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.4",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.0.3",
     "@react-navigation/stack": "^7.0.3",
+    "@reduxjs/toolkit": "^2.3.0",
+    "aliveapp": "file:",
     "expo": "^52.0.7",
     "expo-status-bar": "^2.0.0",
+    "install": "^0.13.0",
     "react": "^18.3.1",
-    "react-native": "^0.76.2"
+    "react-native": "^0.76.2",
+    "react-native-gesture-handler": "^2.20.2",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
