--- a/aliveapp/package.json
+++ b/aliveapp/package.json
@@ -17,11 +17,13 @@
     "@reduxjs/toolkit": "^2.3.0",
     "aliveapp": "file:",
     "axios": "^1.7.8",
+    "cors": "^2.8.5",
     "expo": "^52.0.7",
     "expo-av": "~15.0.1",
     "expo-status-bar": "^2.0.0",
+    "express": "^4.21.1",
     "install": "^0.13.0",
-    "mysql2": "^3.11.4",
+    "mysql2": "^3.11.5",
     "react": "^18.3.1",
     "react-native": "^0.76.2",
     "react-native-gesture-handler": "^2.20.2",
