--- a/aliveapp/package.json
+++ b/aliveapp/package.json
@@ -18,7 +18,7 @@
     "aliveapp": "file:",
     "axios": "^1.7.8",
     "cors": "^2.8.5",
-    "expo": "^52.0.11",
+    "expo": "^52.0.14",
     "expo-av": "~15.0.1",
     "expo-status-bar": "^2.0.0",
     "express": "^4.21.1",
@@ -34,5 +34,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
+  "proxy": "http://localhost:3000",
   "private": true
 }
