--- a/aliveapp/package.json
+++ b/aliveapp/package.json
@@ -32,7 +32,8 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "latest"
   },
   "proxy": "http://localhost:3000",
   "private": true
