--- a/aliveapp/package.json
+++ b/aliveapp/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.4",
     "@react-navigation/native": "^7.0.13",
@@ -25,6 +26,7 @@
     "install": "^0.13.0",
     "mysql2": "^3.11.5",
     "react": "^18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "^0.76.2",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-maps": "^1.20.1",
@@ -32,6 +34,7 @@
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "~4.1.0",
     "react-native-video": "^6.8.2",
+    "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
