--- a/aliveapp/package.json
+++ b/aliveapp/package.json
@@ -18,18 +18,18 @@
     "aliveapp": "file:",
     "axios": "^1.7.8",
     "cors": "^2.8.5",
-    "expo": "^52.0.7",
+    "expo": "^52.0.18",
     "expo-av": "~15.0.1",
     "expo-status-bar": "^2.0.0",
     "express": "^4.21.1",
     "install": "^0.13.0",
     "mysql2": "^3.11.5",
     "react": "^18.3.1",
-    "react-native": "^0.76.2",
+    "react-native": "^0.76.5",
     "react-native-gesture-handler": "^2.20.2",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "^1.18.0",
     "react-native-orientation-locker": "^1.7.0",
-    "react-native-safe-area-context": "^4.14.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-video": "^6.8.2",
     "react-redux": "^9.1.2"
@@ -38,5 +38,6 @@
     "@babel/core": "^7.20.0"
   },
   "proxy": "http://localhost:3000",
-  "private": true
+  "private": true,
+  "type": "module"
 }
